# kokkos-in-a-nutshell

./: .gitignore  LICENSE  README.md
exercises/001/: .gitignore  CMakeLists.txt  build_cpu.sh  build_gpu.sh  hello.cpp  run_cpu.sh  run_gpu.sh
exercises/002/: CMakeLists.txt  build_cpu.sh  functors.cpp  run_cpu.sh  run_gpu.sh
exercises/003/: CMakeLists.txt  run_cpu.sh  run_gpu.sh  views.cpp
exercises/004/: CMakeLists.txt  build_gpu.sh  host_device.cpp  run_cpu.sh  run_gpu.sh
exercises/005/: CMakeLists.txt  build_cpu.sh  build_gpu.sh  reductions.cpp  run_cpu.sh  run_gpu.sh
exercises/006/: CMakeLists.txt  complex_md.cpp  run_cpu.sh  run_gpu.sh
exercises/007/: CMakeLists.txt  mdrange.cpp  run_cpu.sh  run_gpu.sh
exercises/008/: CMakeLists.txt  periodic_ghosts.cpp  run_cpu.sh  run_gpu.sh
exercises/009/: CMakeLists.txt  fused_kernels.cpp  run_cpu.sh  run_gpu.sh
exercises/010/: CMakeLists.txt  overlap_streams.cpp  run_cpu.sh  run_gpu.sh
exercises/011/: CMakeLists.txt  build_gpu.sh  halo_exchange.cpp  run_cpu.sh  run_gpu.sh
exercises/012/: CMakeLists.txt  build_cpu.sh  run_cpu.sh  run_gpu.sh  subview_halo.cpp
exercises/013/: CMakeLists.txt  README.md  run_cpu.sh  run_gpu.sh
exercises/014/: CMakeLists.txt  build_gpu.sh  matvec_ktune.cpp  run_gpu.sh
exercises/014/KTune/: CMakeLists.txt  matvec_ktune.cpp  run_cpu.sh  run_cpu_test.sh
exercises/014/PureKokkos/: CMakeLists.txt  build_cpu.sh  matvec_kokkos.cpp  run_cpu.sh  run_cpu_test.sh  run_gpu.sh
exercises/014b/KTune/: CMakeLists.txt  matvec_ktune.cpp
exercises/014b/PureKokkos/: CMakeLists.txt  matvec_kokkos.cpp
exercises/015/: CMakeLists.txt  README.md  build_cpu.sh  build_gpu.sh  run_cpu.sh  run_gpu.sh
slides/: kokkos_tutorial_slides.md
